@startuml

title __UNTITLED18's Class Diagram__\n

  namespace sample {
    interface sample.AbstractFactory {
    }
  }
  

  namespace sample {
    abstract class sample.AbstractProductArrow {
    }
  }
  

  namespace sample {
    class sample.ActiveObj {
    }
  }
  

  namespace sample {
    class sample.ArrowAssociation {
    }
  }
  

  namespace sample {
    class sample.ArrowCell {
    }
  }
  

  namespace sample {
    class sample.ArrowDependence {
    }
  }
  

  namespace sample {
    class sample.ArrowFour {
    }
  }
  

  namespace sample {
    class sample.Component {
    }
  }
  

  namespace sample {
    class sample.Controller {
    }
  }
  

  namespace sample {
    class sample.FactoryAssociation {
    }
  }
  

  namespace sample {
    class sample.FactoryDependence {
    }
  }
  

  namespace sample {
    class sample.FactoryFour {
    }
  }
  

  namespace sample {
    class sample.Main {
    }
  }
  

  namespace sample {
    class sample.Nodes {
    }
  }
  

  namespace sample {
    class sample.Obj {
    }
  }
  

  namespace sample {
    abstract class sample.Shape {
    }
  }
  

  namespace sample {
    class sample.ShapeCell {
    }
  }
  

  sample.AbstractProductArrow .up.|> java.lang.Cloneable
  sample.ActiveObj -up-|> sample.Shape
  sample.ArrowAssociation .up.|> java.lang.Cloneable
  sample.ArrowAssociation -up-|> sample.AbstractProductArrow
  sample.ArrowCell -up-|> javafx.scene.control.ListCell
  sample.ArrowDependence .up.|> java.lang.Cloneable
  sample.ArrowDependence -up-|> sample.AbstractProductArrow
  sample.ArrowFour .up.|> java.lang.Cloneable
  sample.ArrowFour -up-|> sample.AbstractProductArrow
  sample.Component -up-|> sample.Shape
  sample.Controller o-- sample.AbstractProductArrow : new_arrow
  sample.FactoryAssociation .up.|> sample.AbstractFactory
  sample.FactoryDependence .up.|> sample.AbstractFactory
  sample.FactoryFour .up.|> sample.AbstractFactory
  sample.Main -up-|> javafx.application.Application
  sample.Nodes -up-|> sample.Shape
  sample.Obj -up-|> sample.Shape
  sample.Shape .up.|> java.lang.Cloneable
  sample.ShapeCell -up-|> javafx.scene.control.ListCell


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
